# AgentProp

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
ARCHITECTURE/: index.html
benchmarks/: case_study_tasks.json  gaia_style_qa.json  manifest.md  perf_micro.py
beta_quickstart/: index.html
coding_agents/: index.html
control_layer_quickstart/: index.html
deep_learning/: index.html
dev/: README.md
distribution/: README.md
docs/: ARCHITECTURE.md  PRD.md  beta_quickstart.md  coding_agents.md  control_layer_quickstart.md  deep_learning.md  environment.md  framework_integrations.md  index.md  learned_propagation.md  overview.md  performance_guide.md  plugin_distribution.md  public_release_decision.md  publishing.md  quality_scoring.md  reinforcement_learning.md  release_checklist.md  remaining_prd_archive.md  repository_layout.md  reward_record_schema.md  routing_baseline_evaluation.md  routing_quality.md  terminal_bench_21.md  trace_ingestion.md  troubleshooting.md  tutorial.md  v1_readiness.md  verifier_semantics.md  visualization.md  workflow_schema.md
environment/: index.html
examples/: README.md  coding_agent_full_suite.py  expected_outputs.md  langgraph_live_control.py
experiment-tbench/: REPORT.md
experiments/: README.md  __init__.py  analyze_case_study.py  evaluate_ml_generalization.py  evaluate_routing_baselines.py  failure_localization_study.py  prepare_terminal_bench_21.py  quality_cascade_vs_ic.py  refresh_demo_view.sh  replay_rl_trajectory.py  run_a2_full_suite.sh  run_a2_smoke_gate.sh  run_a2_smoke_gate_remaining.sh  run_bandit_routing.py  run_benchmark.py  run_case_study.py  run_composer_tbench_comparison.sh  run_council_simulation.py  run_draco_subset.py  run_evidence_harness.py  run_experiment_suite.py  run_fault_injection_gate.py  run_gaia_style_benchmark.py  run_ml_rl_sweep.py  run_real_routing_case_study.py  run_rl_routing.py  run_surrogate_comparison.py  run_with_watchdog.py  rzf_scaling_study.py  summarize_harbor_results.py  train_edge_pruning_scorer.py  train_learned_propagation.py  train_seed_scorer.py  train_torch_gnn.py  verifier_placement_evidence.py
framework_integrations/: index.html
learned_propagation/: index.html
overview/: index.html
performance_guide/: index.html
plugin_distribution/: index.html
project/: index.html
quality_scoring/: index.html
reinforcement_learning/: index.html
repository_layout/: index.html
reward_record_schema/: index.html
routing_baseline_evaluation/: index.html
routing_quality/: index.html
schemas/: workflow.json
search/: search_index.json
terminal_bench_21/: index.html
tests/: test_agent_instructions.py  test_algorithms.py  test_artifacts.py  test_async_control_session.py  test_benchmark.py  test_cli.py  test_codex_plugin.py  test_conformal.py  test_contextual_thompson.py  test_control_session.py  test_council_model_pool.py  test_council_orchestrator.py  test_council_simulator.py  test_critical_facts.py  test_cursor_agent.py  test_cursor_terminal_agent.py  test_cursor_usage.py  test_dl.py  test_draco.py  test_dynamic_graph.py  test_evidence_harness.py  test_examples.py  test_experiments.py  test_fast_propagation.py  test_fault_injection.py  test_feature_calibrated.py  test_graph.py  (+35 more)
(+299 files in other folders)
