[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprop"
version = "0.1.0a4"
description = "Graph control for AI-agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "AgentProp contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
  "ai-agents",
  "multi-agent-systems",
  "graph-control",
  "agent-workflows",
  "influence-maximization",
  "reinforcement-learning",
]
dependencies = [
  "networkx>=3.2",
]

[project.scripts]
agentprop = "agentprop.cli:main"
agentprop-mcp = "agentprop.integrations.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
ml = [
  "numpy>=1.26",
]
rl = [
  "gymnasium>=0.29",
]
dl = [
  "torch>=2.2",
]
mcp = [
  "fastmcp>=2.0",
]

[project.urls]
Homepage = "https://github.com/aryan5v/AgentProp"
Repository = "https://github.com/aryan5v/AgentProp"
Documentation = "https://aryan5v.github.io/AgentProp/"
Issues = "https://github.com/aryan5v/AgentProp/issues"

[project.entry-points."agentprop.propagation"]
# Built-in models are NOT declared here — they are always available.
# Third-party packages add their own models here, for example:
#   my-model = "my_package.propagation:MyModel"

[tool.hatch.build.targets.wheel]
packages = ["src/agentprop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentprop"]
ignore_missing_imports = true
